# Linux_Instant_Messaging_Software

./: .gitignore  CMakeLists.txt  README.md
ChatClient/: CMakeLists.txt  resources.qrc
ChatClient/qml/: ChatPage.qml  FriendList.qml  FriendListItem.qml  GroupChatPage.qml  LoginPage.qml  MessageBubble.qml  ProfilePage.qml  RegisterPage.qml  SettingsPage.qml  SimpleImageBubble.qml  main.qml
ChatClient/src/: chatwindow.cpp  chatwindow.h  main.cpp
ChatClient/ui/: chatwindow.ui
ChatServer/: CMakeLists.txt  Dockerfile
ChatServer/src/: filelock.cpp  filelock.h  main.cpp  messagequeue.cpp  messagequeue.h  processmanager.cpp  processmanager.h  readwritelock.cpp  readwritelock.h  semaphore.cpp  semaphore.h  server.cpp  server.h  sharedmemory.cpp  sharedmemory.h  threadmessagequeue.cpp  threadmessagequeue.h  threadpool.cpp  threadpool.h
Common/: config.h  logger.cpp  logger.h  messageprotocol.cpp  messageprotocol.h  utils.h
